--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "recharts": "^2.1.4",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "react-icons": "^4.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
