--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.5",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.3",
     "recharts": "^2.1.4",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1",
-    "react-icons": "^4.3.1"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
